--- a/Site1.Master
+++ b/Site1.Master
@@ -47,10 +47,10 @@
 <body style="height: 673px">
     <form id="form1" runat="server">
         <div class="links">
-            <asp:LinkButton ID="LinkButton1" runat="server" PostBackUrl="~/Dashboard.aspx" CssClass="link-buttons">Dashboard</asp:LinkButton>
-            <asp:LinkButton ID="LinkButton2" PostBackUrl="~/New_course.aspx" CssClass="link-buttons" runat="server">New Course</asp:LinkButton>
-            <asp:LinkButton ID="LinkButton3" PostBackUrl="~/Edit_course.aspx" CssClass="link-buttons" runat="server">Edit Course</asp:LinkButton>
-            <asp:LinkButton ID="LinkButton4" PostBackUrl="~/Student_detail.aspx" CssClass="link-buttons" runat="server">Student Details</asp:LinkButton>
+            <asp:LinkButton ID="LinkButton1" runat="server" PostBackUrl="~/Dashbard.aspx" CssClass="link-buttons" CausesValidation="false">Dashboard</asp:LinkButton>
+            <asp:LinkButton ID="LinkButton2" PostBackUrl="~/New_course.aspx" CssClass="link-buttons" runat="server" CausesValidation="false">New Course</asp:LinkButton>
+            <asp:LinkButton ID="LinkButton3" PostBackUrl="~/Edit_course.aspx" CssClass="link-buttons" runat="server" CausesValidation="false">Edit Course</asp:LinkButton>
+            <asp:LinkButton ID="LinkButton4" PostBackUrl="~/Student_detail.aspx" CssClass="link-buttons" runat="server" CausesValidation="false">Student Details</asp:LinkButton>
         </div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
 </asp:ContentPlaceHolder>
